# Kurskiev_2024

./: .gitignore  README.md  RadialPlot.setting  RadialPlotSetting.json  TimeSeriesPlot.setting  TimeSeriesPlotSetting.json
addons/: .gitignore  database_3.csv  database_4.csv  gen.py  pyproject.toml  shots_db.csv
addons/shots/: shot41585_t216.txt  shot41585_t219.txt  shot41615_t195.txt  shot41615_t198.txt  shot41615_t204.txt  shot41615_t207.txt  shot41615_t210.txt  shot41615_t213.txt  shot41615_t216.txt  shot41629_t192.txt  shot41629_t195.txt  shot41629_t201.txt  shot41644_t192.txt  shot41644_t195.txt  shot41644_t198.txt  shot41644_t201.txt  shot41644_t204.txt  shot41644_t207.txt  shot41645_t192.txt  shot41645_t198.txt  shot41645_t204.txt  shot41645_t210.txt  shot41645_t219.txt  shot41649_t192.txt  shot41649_t195.txt  shot41649_t201.txt  shot41649_t207.txt  shot41649_t210.txt  shot41665_t192.txt  shot41665_t195.txt  shot41665_t198.txt  shot41665_t201.txt  shot41665_t204.txt  shot41665_t207.txt  shot41665_t210.txt  shot41666_t192.txt  shot41666_t198.txt  shot41666_t204.txt  shot41666_t207.txt  shot41666_t213.txt  (+95 more)
equ/: for_laser_GS.equ  for_laser_GS3.equ
exp/: 41585_2130.exp  41585_2160.exp  42119_191.exp  42119_1913.exp  42119_1913_1.exp  42119_1914.exp  42119_191_1.exp  42119_191_g.exp  42119_1945.exp  42119_1976.exp  42119_2007.exp  42119_2039.exp  42119_2070.exp  42119_2101.exp  42119_2133.exp  42119_2164.exp
gleb.kurskiev/: gen.py
gleb.kurskiev/shots/: shot41585_t213.txt  shot41615_t192.txt  shot41615_t201.txt  shot41615_t219.txt  (+111 more)
sbr/: debug.f  typdsp_time.f
