[tool.poetry]
name = "gleb-kurskiev"
version = "0.1.0"
description = ""
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"
packages = [{include = "gleb"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
